--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "userhub",
+  "name": "UserHub",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "clean": "rm -rf dist",
     "build": "nest build",
@@ -17,18 +17,19 @@
     "start:dev": " nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "typeorm:migrate": "dotenv -e .env -- npx typeorm migration:run -d dist/migrations/postgres.data-source.js",
+    "migrate": "dotenv -e .env -- npx typeorm migration:run -d dist/src/migrations/postgres.data-source.js",
+    "migration:test": "dotenv -e .env.test -- npx typeorm migration:run -d dist/src/migrations/postgres.data-source.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "dotenv -e .env.test -- jest   --config ./test/jest-e2e.json"
   },
   "engines": {
     "node": "22.14.0"
   },
   "dependencies": {
-    "@nestjs/bullmq": "^11.0.2",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.0",
@@ -37,13 +38,18 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.0",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@slack/webhook": "^7.0.5",
     "argon2": "^0.43.0",
     "aws-sdk": "^2.1685.0",
+    "cache-manager": "^6.4.3",
+    "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.8.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -62,9 +68,10 @@
     "@nestjs/testing": "^11.1.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^5.0.1",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.15.17",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "8.32.1",
@@ -77,8 +84,8 @@
     "lint-staged": "^16.0.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.1.0",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
@@ -101,5 +108,4 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
-
 }
