--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "start:prod": "node dist/main",
     "migrate": "dotenv -e .env -- npx typeorm migration:run -d dist/src/migrations/postgres.data-source.js",
     "migration:test": "dotenv -e .env.test -- npx typeorm migration:run -d dist/src/migrations/postgres.data-source.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "dotenv -e .env.test -- jest   --config ./test/jest-e2e.json"
+    "test": "dotenv -e .env.test -- jest",
+    "test:watch": "dotenv -e .env.test -- jest --watch",
+    "test:cov": "dotenv -e .env.test -- jest --coverage",
+    "test:debug": "dotenv -e .env.test -- node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "dotenv -e .env.test -- jest   --config ./test/jest-e2e.json",
+    "test:all": "dotenv -e .env.test -- jest --all"
   },
   "engines": {
-    "node": "22.14.0"
+    "node": "22.19.2"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.0.1",
@@ -35,7 +36,7 @@
     "@nestjs/core": "^11.1.0",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mongoose": "^11.0.3",
+
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.0",
     "@nestjs/schedule": "^6.0.0",
@@ -49,8 +50,7 @@
     "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "ioredis": "^5.6.1",
-    "mongoose": "^8.8.1",
+  
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -92,20 +92,34 @@
     "typescript": "^5.1.3"
   },
   "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
+    "projects": [
+      {
+        "displayName": "UNIT",
+        "rootDir": ".",
+        "testMatch": [
+          "<rootDir>/src/**/*.spec.ts"
+        ],
+        "moduleNameMapper": {
+          "^src/(.*)$": "<rootDir>/src/$1"
+        },
+        "moduleFileExtensions": [
+          "js",
+          "json",
+          "ts"
+        ],
+        "transform": {
+          "^.+\\.(t|j)s$": "ts-jest"
+        },
+        "testEnvironment": "node",
+        "collectCoverageFrom": [
+          "src/**/*.(t|j)s",
+          "!src/**/*.module.ts",
+          "!src/**/main.ts",
+          "!src/**/index.ts"
+        ]
+      },
+      "<rootDir>/test/jest-e2e.json"
     ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "coverageDirectory": "../coverage"
   }
 }
