--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,6 @@ jobs:
     strategy:
       matrix:
         node-version: [22.16.0]
-        mongodb-version: ['8.0']
       
 
     steps:
@@ -37,15 +36,46 @@ jobs:
         with:
           postgresql version: '17'
           postgresql db: 'testdb'
-
+          postgresql user: 'postgres'
+          postgresql password: 'postgres'
 
       - name: Start Redis
         uses: supercharge/redis-github-action@1.8.0
         with:
           redis-version: '7.2.4'
+          
+      - name: Wait for services
+        run: sleep 10
 
       - name: Install dependencies
         run: yarn --frozen-lockfile
+        
+      - name: Create test env file
+        run: |
+          cat > .env.test << EOL
+          # APP
+          PORT=3000
+          NODE_ENV=test
+          FRONTEND_URL=http://localhost:3000
+          
+          # JWT
+          JWT_SECRET=test-secret
+          JWT_EXPIRATION=1h
+          JWT_REFRESH_SECRET=test-refresh-secret
+          JWT_REFRESH_EXPIRATION=7d
+          
+          # TYPEORM
+          TYPEORM_TYPE=postgres
+          TYPEORM_HOST=localhost
+          TYPEORM_USERNAME=postgres
+          TYPEORM_PASSWORD=postgres
+          TYPEORM_DATABASE=testdb
+          TYPEORM_PORT=5432
+          
+          # REDIS
+          REDIS_HOST=localhost
+          REDIS_PORT=6379
+          EOL
 
       - name: Run all tests
         run: yarn test:all
