--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,42 +14,45 @@ on:
       - master
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [22.16.0]
-      
-
+        
     steps:
       - name: Git checkout
         uses: actions/checkout@v4
-
+       
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-
+       
       - name: Start PostgreSQL
         uses: harmon758/postgresql-action@v1
         with:
           postgresql version: '17'
-          postgresql db: 'testdb'
+          postgresql db: 'postgres'  
           postgresql user: 'postgres'
           postgresql password: 'postgres'
-
+       
       - name: Start Redis
         uses: supercharge/redis-github-action@1.8.0
         with:
           redis-version: '7.2.4'
-          
+                 
       - name: Wait for services
         run: sleep 10
-
+       
+      - name: Create databases
+        run: |
+          PGPASSWORD=postgres psql -h localhost -U postgres -d postgres -c "CREATE DATABASE userhub;"
+          PGPASSWORD=postgres psql -h localhost -U postgres -d postgres -c "CREATE DATABASE test_db;"
+       
       - name: Install dependencies
         run: yarn --frozen-lockfile
-        
+               
       - name: Create test env file
         run: |
           cat > .env.test << EOL
@@ -57,29 +60,34 @@ jobs:
           PORT=3000
           NODE_ENV=test
           FRONTEND_URL=http://localhost:3000
-          
+                     
           # JWT
           JWT_SECRET=test-secret
           JWT_EXPIRATION=1h
           JWT_REFRESH_SECRET=test-refresh-secret
           JWT_REFRESH_EXPIRATION=7d
-          
+                     
           # TYPEORM
           TYPEORM_TYPE=postgres
           TYPEORM_HOST=localhost
           TYPEORM_USERNAME=postgres
           TYPEORM_PASSWORD=postgres
-          TYPEORM_DATABASE=testdb
+          TYPEORM_DATABASE=test_db  # Using test_db for tests
           TYPEORM_PORT=5432
-          
+                     
           # REDIS
           REDIS_HOST=localhost
           REDIS_PORT=6379
           EOL
-
+       
+      - name: Run migrations
+        run: |
+          yarn typeorm:run-migrations
+          # ou yarn migration:run dependendo do seu script
+       
       - name: Run all tests
         run: yarn test:all
-
+       
       - name: Deploy to Render
         if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
         uses: johnbeynon/render-deploy-action@v0.0.8
