feat/fix: correcao de inconsistencias e criacao de testes unitarios

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@
 PORT=3000
 ORIGIN=http://localhost:3000
 NODE_ENV=development
-
+ISPHEALTH=192.168.0.1,10.0.0.5,172.16.0.100
+MAX_REQUEST_DURATION_MS=
 
 # ===============
 # FRONTEND
@@ -44,13 +45,15 @@ TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=postgres
 TYPEORM_DATABASE=typeorm
 TYPEORM_PORT=5432
+TYPEORM_SSL=false
 
 # ===============
 # REDIS
 # ===============
 REDIS_HOST=localhost
 REDIS_PORT=6379
-
+REDIS_PASSWORD=
+REDIS_TTL=5000
 
 # =========================
 # SLACK
