--- a/.env.test
+++ b/.env.test
@@ -40,6 +40,7 @@ TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=postgres
 TYPEORM_DATABASE=test_db
 TYPEORM_PORT=5432
+TYPEORM_SSL=false
 
 # ===============
 # REDIS
