feat(autenticacao): implementar fluxo de recuperação de senha no backend
- Adicionar funcionalidade de redefinição de senha no UsersService
- Criar endpoint POST /auth/forgot-password no AuthController
- Implementar template de e-mail de redefinição com design moderno
- Adicionar template de boas-vindas para novos usuários
- Criar eventos para notificação de usuário criado e recuperação de senha
- Melhorar tratamento de erros e logs
- Adicionar validações com class-validator
- Atualizar configurações do módulo de usuários

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,18 @@ TYPEORM_PORT=5432
 TYPEORM_SSL=false
 
 # ===============
+# MAIL
+# https://myaccount.google.com/apppasswords
+# ===============
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_SECURE=true
+MAIL_USER=your-email@gmail.com
+MAIL_PASSWORD=your-app-specific-password
+MAIL_FROM_NAME='UserHub'
+MAIL_FROM_ADDRESS=your-email@gmail.com
+
+# ===============
 # REDIS
 # ===============
 REDIS_HOST=localhost
