--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "UserHub",
+  "name": "@userhub/back",
   "version": "0.0.1",
-  "description": "",
+  "description": "Backend do UserHub",
   "author": "",
   "private": true,
   "license": "MIT",
@@ -27,13 +27,15 @@
     "test:debug": "dotenv -e .env.test -- node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "dotenv -e .env.test -- jest   --config ./test/jest-e2e.json",
     "test:dev": "dotenv -e .env.test -- jest --all",
-    "test:all": "jest --all"
+    "test:all": "jest --all",
+    "email:dev": "email dev -p 3001"
   },
   "engines": {
     "node": "22.16.0"
- 
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/bullmq": "^11.0.2",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.0",
     "@nestjs/config": "^4.0.2",
@@ -46,18 +48,25 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@react-email/components": "0.0.42",
+    "@react-email/render": "^1.1.2",
     "@slack/webhook": "^7.0.5",
     "argon2": "^0.43.0",
     "aws-sdk": "^2.1685.0",
+    "bullmq": "^5.53.2",
     "cache-manager": "^6.4.3",
     "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.12.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-email": "4.0.16",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
@@ -73,8 +82,10 @@
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.15.17",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/react": "^19.1.8",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "8.32.1",
     "@typescript-eslint/parser": "8.32.1",
