--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "migration:run": "yarn typeorm migration:run -d src/migrations/postgres.data-source.ts",
     "migration:revert": "yarn typeorm migration:revert",
     "migration:test": "dotenv -e .env.test -- yarn typeorm migration:run -d src/migrations/postgres.data-source.ts",
-    "test": "dotenv -e .env.test -- jest",
-    "test:watch": "dotenv -e .env.test -- jest --watch",
-    "test:cov": "dotenv -e .env.test -- jest --coverage",
-    "test:debug": "dotenv -e .env.test -- node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "dotenv -e .env.test -- jest   --config ./test/jest-e2e.json",
-    "test:dev": "dotenv -e .env.test -- jest --all",
-    "test:all": "jest --all",
+    "test": "dotenv -e .env.test -- jest --config=jest.config.js",
+    "test:watch": "dotenv -e .env.test -- jest --watch --config=jest.config.js",
+    "test:cov": "dotenv -e .env.test -- jest --coverage --config=jest.config.js",
+    "test:debug": "dotenv -e .env.test -- node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config=jest.config.js",
+    "test:e2e": "dotenv -e .env.test -- jest --config=./test/jest-e2e.json",
+    "test:dev": "dotenv -e .env.test -- jest --all --runInBand --config=jest.config.js",
+    "test:all": "dotenv -e .env.test -- jest --all --runInBand --config=jest.config.js",
     "email:dev": "email dev -p 3001"
   },
   "engines": {
@@ -94,6 +94,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "jest-mock": "^29.7.0",
     "lint-staged": "^16.0.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
@@ -103,36 +104,5 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
-  },
-  "jest": {
-    "projects": [
-      {
-        "displayName": "UNIT",
-        "rootDir": ".",
-        "testMatch": [
-          "<rootDir>/src/**/*.spec.ts"
-        ],
-        "moduleNameMapper": {
-          "^src/(.*)$": "<rootDir>/src/$1"
-        },
-        "moduleFileExtensions": [
-          "js",
-          "json",
-          "ts"
-        ],
-        "transform": {
-          "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "testEnvironment": "node",
-        "collectCoverageFrom": [
-          "src/**/*.(t|j)s",
-          "!src/**/*.module.ts",
-          "!src/**/main.ts",
-          "!src/**/index.ts"
-        ]
-      },
-      "<rootDir>/test/jest-e2e.json"
-    ],
-    "coverageDirectory": "../coverage"
   }
 }
