--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,29 @@
 # ===============
 # APP
 # ===============
-PORT=3000
-ORIGIN=http://localhost:3000
+PORT=3005
 NODE_ENV=development
-ISPHEALTH=192.168.0.1,10.0.0.5,172.16.0.100
-MAX_REQUEST_DURATION_MS=
+BACKEND_DOMAIN=http://localhost:3005
+
+# =========================
+# CORS
+# =========================
+CORS_ORIGINS=https://meusite.com,https://www.meusite.com
+CORS_REGEX_PATTERNS=^https://.*\.meusite\.com$,^https://app-.*\.meusite\.com$
+CORS_CREDENTIALS=true
+CORS_ALLOW_NO_ORIGIN=false
+CORS_DEBUG=false
+CORS_METHODS=GET,POST,PUT,DELETE,PATCH,OPTIONS
+CORS_HEADERS=Content-Type,Authorization,X-Requested-With,Accept,Origin
+CORS_EXPOSED_HEADERS=Authorization,X-Total-Count
+
+
+
 
 # ===============
 # FRONTEND
 # ===============
-FRONTEND_URL=http://localhost:3000
+ FRONTEND_DOMAIN=http://localhost:3000
 
 
 # =========================
@@ -43,7 +56,7 @@ TYPEORM_TYPE=postgres
 TYPEORM_HOST=localhost
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=postgres
-TYPEORM_DATABASE=typeorm
+TYPEORM_DATABASE=userhub
 TYPEORM_PORT=5432
 TYPEORM_SSL=false
 
