--- a/.env.test
+++ b/.env.test
@@ -1,14 +1,23 @@
 # ===============
 # APP
 # ===============
-PORT=4000
-ORIGIN=http://localhost:4000
+PORT=3005
 NODE_ENV=test
+
+# =========================
+# CORS
+# =========================
+CORS_ORIGINS="http://localhost:3000,http://localhost:3005"
+CORS_REGEX_PATTERNS="^http://localhost:[0-9]+$,^http://127\.0\.0\.1:[0-9]+$"
+CORS_CREDENTIALS=true
+CORS_ALLOW_NO_ORIGIN=true
+CORS_DEBUG=true
+
 
 # ===============
 # FRONTEND
 # ===============
-FRONTEND_URL=http://localhost:4000
+ FRONTEND_DOMAIN=http://localhost:4000
 
 # =========================
 # JWT
@@ -55,3 +64,6 @@ SLACK_WEBHOOK_URL=
 SLACK_CHANNEL=monitoring
 SLACK_USERNAME=Backend-Bot
 SLACK_ICON_EMOJI=:robot_face:
+
+
+
