--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         uses: harmon758/postgresql-action@v1
         with:
           postgresql version: '17'
-          postgresql db: 'userhub'  
+          postgresql db: 'test_db'  
           postgresql user: 'postgres'
           postgresql password: 'postgres'
        
@@ -48,41 +48,17 @@ jobs:
        
       - name: Install dependencies
         run: yarn --frozen-lockfile
-               
-      - name: Create test env file
-        run: |
-          cat > .env.test << EOL
-          # APP
-          PORT=3000
-          NODE_ENV=test
-          FRONTEND_URL=http://localhost:3000
-                     
-          # JWT
-          JWT_SECRET=test-secret
-          JWT_EXPIRATION=1h
-          JWT_REFRESH_SECRET=test-refresh-secret
-          JWT_REFRESH_EXPIRATION=7d
-                     
-          # TYPEORM
-          TYPEORM_TYPE=postgres
-          TYPEORM_HOST=localhost
-          TYPEORM_USERNAME=postgres
-          TYPEORM_PASSWORD=postgres
-          TYPEORM_DATABASE=test_db  
-          TYPEORM_PORT=5432
-                     
-          # REDIS
-          REDIS_HOST=localhost
-          REDIS_PORT=6379
-          EOL
        
       - name: Run migrations
         run: |
-          yarn migration:run
-          # ou yarn migration:run dependendo do seu script
+          yarn db:migrate
+        env:
+          NODE_ENV: test
           
       - name: Run all tests
         run: yarn test:all
+        env:
+          NODE_ENV: test
        
       - name: Deploy to Render
         if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
