--- a/docker/dev.docker-compose.yml
+++ b/docker/dev.docker-compose.yml
@@ -1,5 +1,5 @@
 version: '3'
-
+name: userhub
 services:
   postgres:
     container_name: postgres
@@ -7,6 +7,7 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+   
     ports:
       - '5432:5432'
     expose:
@@ -14,6 +15,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init-scripts:/docker-entrypoint-initdb.d
+
     networks:
       - app-network
     healthcheck:
