--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "@userhub/back",
   "version": "0.0.1",
   "description": "Backend do UserHub",
   "author": "",
@@ -14,21 +13,22 @@
     "check:lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "start": "nest start",
     "prestart:dev": "yarn clean && yarn format ",
-    "start:dev": " nest start --watch",
+    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migration:run": "yarn typeorm migration:run -d src/migrations/postgres.data-source.ts",
-    "migration:revert": "yarn typeorm migration:revert",
-    "migration:test": "dotenv -e .env.test -- yarn typeorm migration:run -d src/migrations/postgres.data-source.ts",
-    "test": "dotenv -e .env.test -- jest --config=jest.config.js",
-    "test:watch": "dotenv -e .env.test -- jest --watch --config=jest.config.js",
-    "test:cov": "dotenv -e .env.test -- jest --coverage --config=jest.config.js",
-    "test:debug": "dotenv -e .env.test -- node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config=jest.config.js",
-    "test:e2e": "dotenv -e .env.test -- jest --config=./test/jest-e2e.json",
-    "test:dev": "dotenv -e .env.test -- jest --all --runInBand --config=jest.config.js",
-    "test:all": "dotenv -e .env.test -- jest --all --runInBand --config=jest.config.js",
-    "email:dev": "email dev -p 3001"
+    "db:compile": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "db:generate": "yarn db:compile migration:generate -d src/common/typeorm/typeorm-datasource.ts",
+    "db:migrate": "yarn db:compile migration:run -d src/common/typeorm/typeorm-datasource.ts",
+    "db:migrate:test": "NODE_ENV=test yarn db:compile migration:run -d src/common/typeorm/typeorm-datasource.ts ",
+    "db:migrate:revert": "yarn db:compile migration:revert",
+    "db:drop": "yarn db:compile schema:drop -d src/common/typeorm/typeorm-datasource.ts",
+    "test": "jest --runInBand --detectOpenHandles --config=jest.config.js",
+    "test:watch": "jest --watch --config=jest.config.js",
+    "test:cov": "jest --coverage --config=jest.config.js",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config=jest.config.js",
+    "test:e2e": "jest --runInBand --detectOpenHandles --config=jest.config.js --selectProjects e2e",
+    "test:unit": "jest --runInBand --detectOpenHandles --config=jest.config.js --selectProjects unit",
+    "test:all": "jest --all --runInBand --config=jest.config.js"
   },
   "engines": {
     "node": "22.16.0"
@@ -48,9 +48,8 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
-    "@react-email/components": "0.0.42",
-    "@react-email/render": "^1.1.2",
     "@slack/webhook": "^7.0.5",
+    "@types/handlebars": "^4.1.0",
     "argon2": "^0.43.0",
     "aws-sdk": "^2.1685.0",
     "bullmq": "^5.53.2",
@@ -58,38 +57,36 @@
     "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "handlebars": "^4.7.8",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.12.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-email": "4.0.16",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "ulid": "^3.0.0",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.0",
-    "@types/dotenv": "^8.2.0",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.11",
-    "@types/node": "^22.15.17",
+    "@types/node": "^24.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
-    "@types/react": "^19.1.8",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "8.32.1",
     "@typescript-eslint/parser": "8.32.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^17.1.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
