--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,68 +1,129 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Complete workflow
+name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [develop, master, main]
   pull_request:
-    branches:
-      - main
-      - master
+    branches: [develop, master, main]
+
+# Cancel in-progress runs when new commits are pushed
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+# Set default permissions for all jobs
+permissions:
+  contents: read
+  pull-requests: read
 
 jobs:
-  build:
+
+  # Main test job
+  test:
+    name: Test & Build
     runs-on: ubuntu-latest
+
+    timeout-minutes: 15
+    
+    # Configure container services
+    services:
+      postgres:
+        image: postgres:17
+        env:
+          POSTGRES_DB: test_db
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+      redis:
+        image: redis:7.2.4
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
+
     strategy:
       matrix:
-        node-version: [22.16.0]
-        
+        node-version: ['22.16.0']
+
     steps:
-      - name: Git checkout
+      - name: Checkout code
         uses: actions/checkout@v4
-       
-      - name: Use Node.js ${{ matrix.node-version }}
+
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-       
-      - name: Start PostgreSQL
-        uses: harmon758/postgresql-action@v1
-        with:
-          postgresql version: '17'
-          postgresql db: 'test_db'  
-          postgresql user: 'postgres'
-          postgresql password: 'postgres'
-       
-      - name: Start Redis
-        uses: supercharge/redis-github-action@1.8.0
-        with:
-          redis-version: '7.2.4'
-                 
-      - name: Wait for services
-        run: sleep 10
-       
-       
+          cache: 'yarn'
+
       - name: Install dependencies
-        run: yarn --frozen-lockfile
-       
-      - name: Run migrations
-        run: |
-          yarn db:migrate
-        env:
-          NODE_ENV: test
-          
-      - name: Run all tests
+        run: yarn --frozen-lockfile --prefer-offline
+
+      - name: Run database migrations
+        run: yarn db:migrate:test
+        
+      - name: Run tests
         run: yarn test:all
-        env:
-          NODE_ENV: test
-       
+
+      # Cache dos artefatos de build
+      - name: Cache build artifacts
+        uses: actions/cache@v4
+        with:
+          path: |
+            dist/
+            build/
+            .next/
+          key: ${{ runner.os }}-build-${{ github.sha }}
+
+  
+
+  # Job de deploy
+  deploy:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
+    timeout-minutes: 20
+    
+    # Only the deployment job needs write permissions
+    permissions:
+      contents: read
+      deployments: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Deploy to Render
-        if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: ${{ secrets.RENDER_SERVICE_ID }}
           api-key: ${{ secrets.RENDER_API_KEY }}
+
+      - name: Notify deployment success
+        if: success()
+        uses: 8398a7/action-slack@v3
+        with:
+          status: success
+          text: 'Deployment successful! 🚀'
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Notify deployment failure
+        if: failure()
+        uses: 8398a7/action-slack@v3
+        with:
+          status: failure
+          text: 'Deployment failed! ❌'
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
