refactor(core): padroniza filtros de exceção e logging estruturado.

--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "check:format": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "check:lint": "eslint \"{src,apps,packages,shared,test}/**/*.ts\"",
     "start": "nest start",
-    "prestart:dev:": " yarn format ",
+    "prestart:dev:": " yarn format",
     "start:dev": "nest start --watch",
-    "start:dev:monolith": " yarn start:dev monolith",
-    "start:dev:notification": " yarn start:dev notification",
+    "prestart:dev:monolith": "yarn clean:monolith && yarn format",
+    "prestart:dev:notification": "yarn clean:notification && yarn format",
+    "start:dev:monolith": "nest start --watch monolith",
+    "start:dev:notification": "nest start --watch notification",
     "start:debug": "nest start --debug --watch",
-    "start:debug:monolith": "nest start monolith --debug --watch",
-    "start:debug:notification": "nest start notification --debug --watch",
+    "start:debug:monolith": "nest start monolith --debug --watch --trace-warnings",
+    "start:debug:notification": "nest start notification --debug --watch --trace-warnings",
     "start:prod": "node dist/src/main",
     "start:prod:monolith": "node dist/monolith/apps/monolith/src/main.js",
     "start:prod:notification": "node dist/notification/apps/notification/src/main.js",
@@ -48,7 +50,6 @@
     "@golevelup/nestjs-rabbitmq": "^6.0.1",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.1",
- 
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.0",
     "@nestjs/config": "^4.0.2",
